# serializer version: 1
# name: test_fallbacks[chain]
  '''
  {
    "lc": 1,
    "type": "constructor",
    "id": [
      "langchain",
      "schema",
      "runnable",
      "RunnableSequence"
    ],
    "kwargs": {
      "first": {
        "lc": 1,
        "type": "constructor",
        "id": [
          "langchain",
          "schema",
          "runnable",
          "RunnableParallel"
        ],
        "kwargs": {
          "steps__": {
            "buz": {
              "lc": 1,
              "type": "not_implemented",
              "id": [
                "langchain_core",
                "runnables",
                "base",
                "RunnableLambda"
              ],
              "repr": "RunnableLambda(lambda x: x)"
            }
          }
        },
        "name": "RunnableParallel<buz>",
        "graph": {
          "nodes": [
            {
              "id": 0,
              "type": "schema",
              "data": "Parallel<buz>Input"
            },
            {
              "id": 1,
              "type": "schema",
              "data": "Parallel<buz>Output"
            },
            {
              "id": 2,
              "type": "runnable",
              "data": {
                "id": [
                  "langchain_core",
                  "runnables",
                  "base",
                  "RunnableLambda"
                ],
                "name": "Lambda"
              }
            }
          ],
          "edges": [
            {
              "source": 0,
              "target": 2
            },
            {
              "source": 2,
              "target": 1
            }
          ]
        }
      },
      "last": {
        "lc": 1,
        "type": "constructor",
        "id": [
          "langchain",
          "schema",
          "runnable",
          "RunnableWithFallbacks"
        ],
        "kwargs": {
          "runnable": {
            "lc": 1,
            "type": "constructor",
            "id": [
              "langchain",
              "schema",
              "runnable",
              "RunnableSequence"
            ],
            "kwargs": {
              "first": {
                "lc": 1,
                "type": "constructor",
                "id": [
                  "langchain",
                  "prompts",
                  "prompt",
                  "PromptTemplate"
                ],
                "kwargs": {
                  "input_variables": [
                    "buz"
                  ],
                  "template": "what did baz say to {buz}",
                  "template_format": "f-string"
                },
                "name": "PromptTemplate",
                "graph": {
                  "nodes": [
                    {
                      "id": 0,
                      "type": "schema",
                      "data": "PromptInput"
                    },
                    {
                      "id": 1,
                      "type": "runnable",
                      "data": {
                        "id": [
                          "langchain",
                          "prompts",
                          "prompt",
                          "PromptTemplate"
                        ],
                        "name": "PromptTemplate"
                      }
                    },
                    {
                      "id": 2,
                      "type": "schema",
                      "data": "PromptTemplateOutput"
                    }
                  ],
                  "edges": [
                    {
                      "source": 0,
                      "target": 1
                    },
                    {
                      "source": 1,
                      "target": 2
                    }
                  ]
                }
              },
              "last": {
                "lc": 1,
                "type": "not_implemented",
                "id": [
                  "langchain_core",
                  "language_models",
                  "fake",
                  "FakeListLLM"
                ],
                "repr": "FakeListLLM(responses=['foo'], i=1)",
                "name": "FakeListLLM",
                "graph": {
                  "nodes": [
                    {
                      "id": 0,
                      "type": "schema",
                      "data": "FakeListLLMInput"
                    },
                    {
                      "id": 1,
                      "type": "runnable",
                      "data": {
                        "id": [
                          "langchain_core",
                          "language_models",
                          "fake",
                          "FakeListLLM"
                        ],
                        "name": "FakeListLLM"
                      }
                    },
                    {
                      "id": 2,
                      "type": "schema",
                      "data": "FakeListLLMOutput"
                    }
                  ],
                  "edges": [
                    {
                      "source": 0,
                      "target": 1
                    },
                    {
                      "source": 1,
                      "target": 2
                    }
                  ]
                }
              }
            },
            "name": "RunnableSequence",
            "graph": {
              "nodes": [
                {
                  "id": 0,
                  "type": "schema",
                  "data": "PromptInput"
                },
                {
                  "id": 1,
                  "type": "runnable",
                  "data": {
                    "id": [
                      "langchain",
                      "prompts",
                      "prompt",
                      "PromptTemplate"
                    ],
                    "name": "PromptTemplate"
                  }
                },
                {
                  "id": 2,
                  "type": "runnable",
                  "data": {
                    "id": [
                      "langchain_core",
                      "language_models",
                      "fake",
                      "FakeListLLM"
                    ],
                    "name": "FakeListLLM"
                  }
                },
                {
                  "id": 3,
                  "type": "schema",
                  "data": "FakeListLLMOutput"
                }
              ],
              "edges": [
                {
                  "source": 0,
                  "target": 1
                },
                {
                  "source": 2,
                  "target": 3
                },
                {
                  "source": 1,
                  "target": 2
                }
              ]
            }
          },
          "fallbacks": [
            {
              "lc": 1,
              "type": "constructor",
              "id": [
                "langchain",
                "schema",
                "runnable",
                "RunnableSequence"
              ],
              "kwargs": {
                "first": {
                  "lc": 1,
                  "type": "constructor",
                  "id": [
                    "langchain",
                    "prompts",
                    "prompt",
                    "PromptTemplate"
                  ],
                  "kwargs": {
                    "input_variables": [
                      "buz"
                    ],
                    "template": "what did baz say to {buz}",
                    "template_format": "f-string"
                  },
                  "name": "PromptTemplate",
                  "graph": {
                    "nodes": [
                      {
                        "id": 0,
                        "type": "schema",
                        "data": "PromptInput"
                      },
                      {
                        "id": 1,
                        "type": "runnable",
                        "data": {
                          "id": [
                            "langchain",
                            "prompts",
                            "prompt",
                            "PromptTemplate"
                          ],
                          "name": "PromptTemplate"
                        }
                      },
                      {
                        "id": 2,
                        "type": "schema",
                        "data": "PromptTemplateOutput"
                      }
                    ],
                    "edges": [
                      {
                        "source": 0,
                        "target": 1
                      },
                      {
                        "source": 1,
                        "target": 2
                      }
                    ]
                  }
                },
                "last": {
                  "lc": 1,
                  "type": "not_implemented",
                  "id": [
                    "langchain_core",
                    "language_models",
                    "fake",
                    "FakeListLLM"
                  ],
                  "repr": "FakeListLLM(responses=['bar'])",
                  "name": "FakeListLLM",
                  "graph": {
                    "nodes": [
                      {
                        "id": 0,
                        "type": "schema",
                        "data": "FakeListLLMInput"
                      },
                      {
                        "id": 1,
                        "type": "runnable",
                        "data": {
                          "id": [
                            "langchain_core",
                            "language_models",
                            "fake",
                            "FakeListLLM"
                          ],
                          "name": "FakeListLLM"
                        }
                      },
                      {
                        "id": 2,
                        "type": "schema",
                        "data": "FakeListLLMOutput"
                      }
                    ],
                    "edges": [
                      {
                        "source": 0,
                        "target": 1
                      },
                      {
                        "source": 1,
                        "target": 2
                      }
                    ]
                  }
                }
              },
              "name": "RunnableSequence",
              "graph": {
                "nodes": [
                  {
                    "id": 0,
                    "type": "schema",
                    "data": "PromptInput"
                  },
                  {
                    "id": 1,
                    "type": "runnable",
                    "data": {
                      "id": [
                        "langchain",
                        "prompts",
                        "prompt",
                        "PromptTemplate"
                      ],
                      "name": "PromptTemplate"
                    }
                  },
                  {
                    "id": 2,
                    "type": "runnable",
                    "data": {
                      "id": [
                        "langchain_core",
                        "language_models",
                        "fake",
                        "FakeListLLM"
                      ],
                      "name": "FakeListLLM"
                    }
                  },
                  {
                    "id": 3,
                    "type": "schema",
                    "data": "FakeListLLMOutput"
                  }
                ],
                "edges": [
                  {
                    "source": 0,
                    "target": 1
                  },
                  {
                    "source": 2,
                    "target": 3
                  },
                  {
                    "source": 1,
                    "target": 2
                  }
                ]
              }
            }
          ],
          "exceptions_to_handle": [
            {
              "lc": 1,
              "type": "not_implemented",
              "id": [
                "builtins",
                "Exception"
              ],
              "repr": "<class 'Exception'>"
            }
          ]
        },
        "name": "RunnableWithFallbacks",
        "graph": {
          "nodes": [
            {
              "id": 0,
              "type": "schema",
              "data": "PromptInput"
            },
            {
              "id": 1,
              "type": "runnable",
              "data": {
                "id": [
                  "langchain",
                  "schema",
                  "runnable",
                  "RunnableWithFallbacks"
                ],
                "name": "WithFallbacks"
              }
            },
            {
              "id": 2,
              "type": "schema",
              "data": "FakeListLLMOutput"
            }
          ],
          "edges": [
            {
              "source": 0,
              "target": 1
            },
            {
              "source": 1,
              "target": 2
            }
          ]
        }
      }
    },
    "name": "RunnableSequence",
    "graph": {
      "nodes": [
        {
          "id": 0,
          "type": "schema",
          "data": "Parallel<buz>Input"
        },
        {
          "id": 1,
          "type": "runnable",
          "data": {
            "id": [
              "langchain_core",
              "runnables",
              "base",
              "RunnableLambda"
            ],
            "name": "Lambda"
          }
        },
        {
          "id": 2,
          "type": "runnable",
          "data": {
            "id": [
              "langchain",
              "schema",
              "runnable",
              "RunnableWithFallbacks"
            ],
            "name": "WithFallbacks"
          }
        },
        {
          "id": 3,
          "type": "schema",
          "data": "FakeListLLMOutput"
        }
      ],
      "edges": [
        {
          "source": 0,
          "target": 1
        },
        {
          "source": 2,
          "target": 3
        },
        {
          "source": 1,
          "target": 2
        }
      ]
    }
  }
  '''
# ---
# name: test_fallbacks[chain_pass_exceptions]
  '''
  {
    "lc": 1,
    "type": "constructor",
    "id": [
      "langchain",
      "schema",
      "runnable",
      "RunnableSequence"
    ],
    "kwargs": {
      "first": {
        "lc": 1,
        "type": "constructor",
        "id": [
          "langchain",
          "schema",
          "runnable",
          "RunnableParallel"
        ],
        "kwargs": {
          "steps__": {
            "text": {
              "lc": 1,
              "type": "constructor",
              "id": [
                "langchain",
                "schema",
                "runnable",
                "RunnablePassthrough"
              ],
              "kwargs": {},
              "name": "RunnablePassthrough",
              "graph": {
                "nodes": [
                  {
                    "id": 0,
                    "type": "schema",
                    "data": "PassthroughInput"
                  },
                  {
                    "id": 1,
                    "type": "runnable",
                    "data": {
                      "id": [
                        "langchain",
                        "schema",
                        "runnable",
                        "RunnablePassthrough"
                      ],
                      "name": "Passthrough"
                    }
                  },
                  {
                    "id": 2,
                    "type": "schema",
                    "data": "PassthroughOutput"
                  }
                ],
                "edges": [
                  {
                    "source": 0,
                    "target": 1
                  },
                  {
                    "source": 1,
                    "target": 2
                  }
                ]
              }
            }
          }
        },
        "name": "RunnableParallel<text>",
        "graph": {
          "nodes": [
            {
              "id": 0,
              "type": "schema",
              "data": "Parallel<text>Input"
            },
            {
              "id": 1,
              "type": "schema",
              "data": "Parallel<text>Output"
            },
            {
              "id": 2,
              "type": "runnable",
              "data": {
                "id": [
                  "langchain",
                  "schema",
                  "runnable",
                  "RunnablePassthrough"
                ],
                "name": "Passthrough"
              }
            }
          ],
          "edges": [
            {
              "source": 0,
              "target": 2
            },
            {
              "source": 2,
              "target": 1
            }
          ]
        }
      },
      "last": {
        "lc": 1,
        "type": "constructor",
        "id": [
          "langchain",
          "schema",
          "runnable",
          "RunnableWithFallbacks"
        ],
        "kwargs": {
          "runnable": {
            "lc": 1,
            "type": "not_implemented",
            "id": [
              "langchain_core",
              "runnables",
              "base",
              "RunnableLambda"
            ],
            "repr": "RunnableLambda(_raise_error)"
          },
          "fallbacks": [
            {
              "lc": 1,
              "type": "not_implemented",
              "id": [
                "langchain_core",
                "runnables",
                "base",
                "RunnableLambda"
              ],
              "repr": "RunnableLambda(_dont_raise_error)"
            }
          ],
          "exceptions_to_handle": [
            {
              "lc": 1,
              "type": "not_implemented",
              "id": [
                "builtins",
                "Exception"
              ],
              "repr": "<class 'Exception'>"
            }
          ],
          "exception_key": "exception"
        },
        "name": "RunnableWithFallbacks",
        "graph": {
          "nodes": [
            {
              "id": 0,
              "type": "schema",
              "data": "_raise_error_input"
            },
            {
              "id": 1,
              "type": "runnable",
              "data": {
                "id": [
                  "langchain",
                  "schema",
                  "runnable",
                  "RunnableWithFallbacks"
                ],
                "name": "WithFallbacks"
              }
            },
            {
              "id": 2,
              "type": "schema",
              "data": "_raise_error_output"
            }
          ],
          "edges": [
            {
              "source": 0,
              "target": 1
            },
            {
              "source": 1,
              "target": 2
            }
          ]
        }
      }
    },
    "name": "RunnableSequence",
    "graph": {
      "nodes": [
        {
          "id": 0,
          "type": "schema",
          "data": "Parallel<text>Input"
        },
        {
          "id": 1,
          "type": "runnable",
          "data": {
            "id": [
              "langchain",
              "schema",
              "runnable",
              "RunnablePassthrough"
            ],
            "name": "Passthrough"
          }
        },
        {
          "id": 2,
          "type": "runnable",
          "data": {
            "id": [
              "langchain",
              "schema",
              "runnable",
              "RunnableWithFallbacks"
            ],
            "name": "WithFallbacks"
          }
        },
        {
          "id": 3,
          "type": "schema",
          "data": "_raise_error_output"
        }
      ],
      "edges": [
        {
          "source": 0,
          "target": 1
        },
        {
          "source": 2,
          "target": 3
        },
        {
          "source": 1,
          "target": 2
        }
      ]
    }
  }
  '''
# ---
# name: test_fallbacks[llm]
  '''
  {
    "lc": 1,
    "type": "constructor",
    "id": [
      "langchain",
      "schema",
      "runnable",
      "RunnableWithFallbacks"
    ],
    "kwargs": {
      "runnable": {
        "lc": 1,
        "type": "not_implemented",
        "id": [
          "langchain_core",
          "language_models",
          "fake",
          "FakeListLLM"
        ],
        "repr": "FakeListLLM(responses=['foo'], i=1)",
        "name": "FakeListLLM",
        "graph": {
          "nodes": [
            {
              "id": 0,
              "type": "schema",
              "data": "FakeListLLMInput"
            },
            {
              "id": 1,
              "type": "runnable",
              "data": {
                "id": [
                  "langchain_core",
                  "language_models",
                  "fake",
                  "FakeListLLM"
                ],
                "name": "FakeListLLM"
              }
            },
            {
              "id": 2,
              "type": "schema",
              "data": "FakeListLLMOutput"
            }
          ],
          "edges": [
            {
              "source": 0,
              "target": 1
            },
            {
              "source": 1,
              "target": 2
            }
          ]
        }
      },
      "fallbacks": [
        {
          "lc": 1,
          "type": "not_implemented",
          "id": [
            "langchain_core",
            "language_models",
            "fake",
            "FakeListLLM"
          ],
          "repr": "FakeListLLM(responses=['bar'])",
          "name": "FakeListLLM",
          "graph": {
            "nodes": [
              {
                "id": 0,
                "type": "schema",
                "data": "FakeListLLMInput"
              },
              {
                "id": 1,
                "type": "runnable",
                "data": {
                  "id": [
                    "langchain_core",
                    "language_models",
                    "fake",
                    "FakeListLLM"
                  ],
                  "name": "FakeListLLM"
                }
              },
              {
                "id": 2,
                "type": "schema",
                "data": "FakeListLLMOutput"
              }
            ],
            "edges": [
              {
                "source": 0,
                "target": 1
              },
              {
                "source": 1,
                "target": 2
              }
            ]
          }
        }
      ],
      "exceptions_to_handle": [
        {
          "lc": 1,
          "type": "not_implemented",
          "id": [
            "builtins",
            "Exception"
          ],
          "repr": "<class 'Exception'>"
        }
      ]
    },
    "name": "RunnableWithFallbacks",
    "graph": {
      "nodes": [
        {
          "id": 0,
          "type": "schema",
          "data": "FakeListLLMInput"
        },
        {
          "id": 1,
          "type": "runnable",
          "data": {
            "id": [
              "langchain",
              "schema",
              "runnable",
              "RunnableWithFallbacks"
            ],
            "name": "WithFallbacks"
          }
        },
        {
          "id": 2,
          "type": "schema",
          "data": "FakeListLLMOutput"
        }
      ],
      "edges": [
        {
          "source": 0,
          "target": 1
        },
        {
          "source": 1,
          "target": 2
        }
      ]
    }
  }
  '''
# ---
# name: test_fallbacks[llm_multi]
  '''
  {
    "lc": 1,
    "type": "constructor",
    "id": [
      "langchain",
      "schema",
      "runnable",
      "RunnableWithFallbacks"
    ],
    "kwargs": {
      "runnable": {
        "lc": 1,
        "type": "not_implemented",
        "id": [
          "langchain_core",
          "language_models",
          "fake",
          "FakeListLLM"
        ],
        "repr": "FakeListLLM(responses=['foo'], i=1)",
        "name": "FakeListLLM",
        "graph": {
          "nodes": [
            {
              "id": 0,
              "type": "schema",
              "data": "FakeListLLMInput"
            },
            {
              "id": 1,
              "type": "runnable",
              "data": {
                "id": [
                  "langchain_core",
                  "language_models",
                  "fake",
                  "FakeListLLM"
                ],
                "name": "FakeListLLM"
              }
            },
            {
              "id": 2,
              "type": "schema",
              "data": "FakeListLLMOutput"
            }
          ],
          "edges": [
            {
              "source": 0,
              "target": 1
            },
            {
              "source": 1,
              "target": 2
            }
          ]
        }
      },
      "fallbacks": [
        {
          "lc": 1,
          "type": "not_implemented",
          "id": [
            "langchain_core",
            "language_models",
            "fake",
            "FakeListLLM"
          ],
          "repr": "FakeListLLM(responses=['baz'], i=1)",
          "name": "FakeListLLM",
          "graph": {
            "nodes": [
              {
                "id": 0,
                "type": "schema",
                "data": "FakeListLLMInput"
              },
              {
                "id": 1,
                "type": "runnable",
                "data": {
                  "id": [
                    "langchain_core",
                    "language_models",
                    "fake",
                    "FakeListLLM"
                  ],
                  "name": "FakeListLLM"
                }
              },
              {
                "id": 2,
                "type": "schema",
                "data": "FakeListLLMOutput"
              }
            ],
            "edges": [
              {
                "source": 0,
                "target": 1
              },
              {
                "source": 1,
                "target": 2
              }
            ]
          }
        },
        {
          "lc": 1,
          "type": "not_implemented",
          "id": [
            "langchain_core",
            "language_models",
            "fake",
            "FakeListLLM"
          ],
          "repr": "FakeListLLM(responses=['bar'])",
          "name": "FakeListLLM",
          "graph": {
            "nodes": [
              {
                "id": 0,
                "type": "schema",
                "data": "FakeListLLMInput"
              },
              {
                "id": 1,
                "type": "runnable",
                "data": {
                  "id": [
                    "langchain_core",
                    "language_models",
                    "fake",
                    "FakeListLLM"
                  ],
                  "name": "FakeListLLM"
                }
              },
              {
                "id": 2,
                "type": "schema",
                "data": "FakeListLLMOutput"
              }
            ],
            "edges": [
              {
                "source": 0,
                "target": 1
              },
              {
                "source": 1,
                "target": 2
              }
            ]
          }
        }
      ],
      "exceptions_to_handle": [
        {
          "lc": 1,
          "type": "not_implemented",
          "id": [
            "builtins",
            "Exception"
          ],
          "repr": "<class 'Exception'>"
        }
      ]
    },
    "name": "RunnableWithFallbacks",
    "graph": {
      "nodes": [
        {
          "id": 0,
          "type": "schema",
          "data": "FakeListLLMInput"
        },
        {
          "id": 1,
          "type": "runnable",
          "data": {
            "id": [
              "langchain",
              "schema",
              "runnable",
              "RunnableWithFallbacks"
            ],
            "name": "WithFallbacks"
          }
        },
        {
          "id": 2,
          "type": "schema",
          "data": "FakeListLLMOutput"
        }
      ],
      "edges": [
        {
          "source": 0,
          "target": 1
        },
        {
          "source": 1,
          "target": 2
        }
      ]
    }
  }
  '''
# ---
